--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,403 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500&family=Lora:wght@400;500&family=Poppins:wght@400;600&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+:root {
+  --text-color: #f3f1f1;
+  --bg-color: #131313;
+  --border-color: rgb(227, 0, 253);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background-color: var(--bg-color);
+}
+
+h2 {
+  font-family: "poppins", serif;
+  color: var(--text-color);
+  font-size: 2rem;
+  transition: all 0.5s linear;
+}
+.h1 {
+  font-family: "poppins", serif;
+  transition: all 0.5s linear;
+  font-size: 3rem;
+  font-weight:bolder;
+  background: linear-gradient(rgb(255, 44, 121),rgb(232, 3, 182),rgb(164, 56, 197));
+   background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+  
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+ 
+  min-width: 10rem;
+  max-height: 30rem;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  transition: all 0.3s linear;
+}
+
+
+.container {
+  max-width: 140rem;
+  margin: auto;
+  padding: 3rem;
+}
+
+.grid {
+
+  display: grid;
+  gap: 3rem;
+  
+}
+
+.grid-col-four {
+  grid-template-columns: repeat(4, 1fr);
+  
+}
+.card-big{
+  border: 0.01rem solid rgb(37, 37, 37);
+  background-color: rgb(37, 37, 37);
+}
+.card {
+  width: 25rem;
+  max-width: 30rem;
+  min-height: 30rem;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.big-main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 45vh;
+  background: linear-gradient(rgb(169, 20, 75),rgb(139, 30, 115),rgb(60, 16, 73));
+}
+
+.main{
+  font-size: 6rem;
+  font-weight: bolder;
+  font-family: "Poppins","serif";
+  color: rgb(236, 236, 236);
+}
+
+.search-section {
+  margin: auto;
+  text-align: center;
+  margin: 4rem 0;
+}
+
+input[type="text"]{
+  width: 40rem;
+  color: white;
+  border-radius: 0.6rem;
+  background-color: rgb(2, 2, 2);
+  border: 0.1rem solid var(--border-color);
+  padding: 1rem 2rem;
+  font-size: 1.8rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  outline: none;
+  margin-top: 2rem;
+}
+input:focus{
+  width: 50rem;
+  border: 0.1rem solid var(--border-color);
+  color: white;
+  background-color: rgb(65, 64, 64);
+  padding: 1rem 2rem;
+  font-size: 1.8rem;
+  transition: all 0.5s;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  outline: none;
+  margin-top: 2rem;
+}
+
+.card-error h2 {
+  color: red;
+  margin-top: 1rem;
+  font-size: 1.9rem;
+  transition: all 0.5s;
+}
+.foot-big{
+  height: 7rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.foot{
+  font-family: "Poppins","serif";
+  color: white;
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+}
+.identity{
+  color: white;
+  background-color: black;
+  border: none;
+  margin: 0;
+  padding: 0 1rem;
+
+}
+.movie-section {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgb(255, 44, 121),rgb(232, 3, 182),rgb(164, 56, 197));
+  display: grid;
+  place-items: center;
+}
+
+.loading {
+  font-size: 3.2rem;
+  color: var(--text-color);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-section .loading {
+  font-size: 3.2rem;
+  color: var(--bg-color);
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movie-card {
+  min-width: 30rem;
+  width: 50vw;
+  background-color: var(--bg-color);
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 0.6fr 1fr;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-card img {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border-radius: 0;
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  max-height: 50rem;
+  height: auto;
+}
+
+.movie-card .title {
+  font-size: 2.8rem;
+  color: var(--text-color);
+  font-weight: bold;
+}
+
+.card-content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.details {
+  font-size: 1.7rem;
+  color: white;
+  font-family: 'poppins','serif';
+}
+
+a{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  padding: 3.2rem 1rem;
+  color: var(--text-color);
+  border: 0.2rem solid var(--text-color);
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+  transition: all 0.3s linear;
+}
+
+a:hover {
+  background-color: #191919;
+background-image: linear-gradient(225deg, #84004b 0%, #500350 50%, #350e52 100%);
+  color: var(--bg-color);
+}
+
+a:hover h2 {
+  color: rgb(190, 190, 190);
+  transform: translateY(-1.5rem);
+  display: inline-block;
+}
+
+a:hover img {
+  transform: scale(1.1);
+}
+
+.back-btn {
+  padding: 1.2rem 3.6rem;
+  border: none;
+  background-color: #b01183;
+  color: white;
+}
+.back-btn{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* responsive code   */
+@media (max-width: 1200px) {
+  .container {
+    margin: auto;
+    max-width: 110rem;
+  }
+  .grid-col-four {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
+@media (max-width: 998px) {
+  .container {
+    max-width: 90rem;
+    margin: auto;
+  }
+  .grid-col-four {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  input {
+    width: 25rem;
+  }
+
+  .movie-section {
+    height: auto;
+    padding: 4.8rem 0;
+    background-color: #131313;
+  }
+
+  .movie-card {
+    grid-template-columns: 1fr;
+  }
+
+  .card-content {
+    padding-left: 2rem;
+  }
+
+  .back-btn {
+    margin-bottom: 3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 70rem;
+    margin: auto;
+  }
+  .grid-col-four {
+    grid-template-columns: 1fr;
+  }
+}
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: rgb(246, 6, 246);
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
