--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ input:focus{
   gap: 2rem;
   grid-template-columns: 0.6fr 1fr;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 2rem;
+  border-radius: 1.5rem;
 }
 
 .movie-card img {
@@ -201,6 +201,8 @@ input:focus{
   border-radius: 0;
   border-top-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
   max-height: 50rem;
   height: auto;
 }
@@ -285,7 +287,7 @@ a:hover img {
   }
 
   input {
-    width: 25rem;
+    width: 20rem;
   }
 
   .movie-section {
@@ -325,7 +327,7 @@ a:hover img {
     width: 18rem;
   }
   input:focus{
-    width: 22rem;
+    width: 20rem;
   }
 }
 
